# kb-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  app.py  chatbot.py  pyproject.toml  run.sh  schema.py
.github/workflows/: codestyle.yml
