[project]
name = "kb-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "langchain-community==0.3.1",
    "langchain-anthropic",
    "langchain-chroma",
    "langchain-huggingface",
    "sentence-transformers",
    "langgraph",
    "langsmith",
    "chromadb",
    "pypdf",
    "streamlit",
    "python-dotenv",
    "grandalf",
    "uuid>=1.30",
    "dotenv>=0.9.9",
    "pip>=25.1.1",
    "pylint>=3.3.7",
]

[tool.pip]
index-url = "https://download.pytorch.org/whl/cpu"
