[project]
name = "kb-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "langchain-community==0.3.1",
    "langchain-anthropic",
    "langchain-chroma",
    "langchain-huggingface",
    "sentence-transformers",
    "langgraph",
    "langsmith",
    "chromadb",
    "pypdf",
    "streamlit",
    "python-dotenv",
    "grandalf",
    "pre-commit>=4.2.0",
]

[tool.pip]
index-url = "https://download.pytorch.org/whl/cpu"
